--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
+    "socket.io-client": "^4.7.5",
     "tweetnacl": "^1.0.3",
     "zod": "^3.23.8"
   }
